front-homolog/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: front-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
