front-homolog/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ing-homolog
  annotations:
    cert-manager.io/cluster-issuer: "front-clusterissuer-homolog"
    spec.ingressClassName: "public"
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - homolog.spacearena.net
    secretName: front-homolog-tls-secret
  rules:
  - host: homolog.spacearena.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-svc-homolog
            port:
              number: 80
